[package]
name = "coreutilsrs"
version = "0.1.0"
authors = ["Mohsen Alizadeh <mohsen@alizadeh.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "true"
path = "src/true.rs"

[[bin]]
name = "false"
path = "src/false.rs"

[dependencies]
